# Python-AI

./: .gitignore  AGENTS.md  README.md  app.py  cli.py  gradio_app.py  pyproject.toml  requirements-advanced.txt  requirements.txt
Python-AI-main/: app.py  cli.py  gradio_app.py
Python-AI-main/.github/workflows/: ci.yml
Python-AI-main/campus_rag/: evaluate.py
Python-AI-main/data/processed/: chunks.csv
Python-AI-main/data/raw/: combined_kb.jsonl
Python-AI-main/docs/: 冲分.md  测试覆盖与代码质量任务完成说明.md
Python-AI-main/models/: chunk_meta.parquet
Python-AI-main/scripts/: 01_prepare_data.py  03_evaluate.py  10_crawl_tongji.py
Python-AI-main/tests/: test_config.py  test_data.py  test_embeddings.py  test_pipeline.py  test_retriever.py  test_splitter.py
campus_rag/: __init__.py  config.py  data.py  embeddings.py  evaluate.py  generator.py  loaders.py  memory.py  query_rewriter.py  reranker.py  retriever.py  splitter.py  vectorstore.py
data/processed/: chunks.csv  knowledge_base_clean.csv
data/raw/: campus_faq.jsonl  campus_kb.jsonl  combined_kb.jsonl  crawled_pages.jsonl  eval_150.jsonl  eval_questions.jsonl
docs/: 冲分总体规划.md  运行手册.md  运行手册与项目解说.md
github_upload_task31/: README.md  UPLOAD_MANIFEST.txt
github_upload_task31/data/processed/: chunks.csv
github_upload_task31/data/raw/: combined_kb.jsonl
github_upload_task31/logs/: data_profile.json  evaluation_detail.csv
github_upload_task31/models/: chunk_meta.parquet
logs/: data_profile.json  evaluation_detail.csv  evaluation_summary.json  llm_judge_scores.csv  retrieval_strategy_comparison.csv  training_log.json
models/: chunk_meta.parquet  tfidf_vector_store.joblib
reports/: 中期进展报告_B07_RAG校园智能问答助手.docx  选题报告_B07_RAG校园智能问答助手.docx
scripts/: 00_extract_documents.py  01_prepare_data.py  02_build_index.py  03_evaluate.py  10_crawl_tongji.py  11_pages_to_kb.py  12_build_eval.py  20_run_ablation.py  21_failure_analysis.py  build_course_reports_qimo.py  build_reports.py
tests/: test_config.py  test_evaluate_metrics.py  test_generator.py  test_loaders.py  test_memory.py  test_pipeline.py  test_query_rewriter.py  test_reranker.py  test_retriever.py  test_splitter.py  test_vectorstore.py
