[project]
name = "campus-rag"
version = "2.0.0"
description = "同济大学 RAG 校园智能问答助手 — BGE + FAISS + RRF + DeepSeek 七层检索增强管线"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "凌霄", email = "student@tongji.edu.cn" },
    { name = "归梦依" },
    { name = "周子涵" },
    { name = "杨歆苒" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.scripts]
tongji-rag = "cli:main"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["campus_rag*"]

# ============================================================
# Ruff — 代码检查
# ============================================================
[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # fastapi depends
    "SIM108", # ternary suggestion (not always clearer)
]
per-file-ignores = { "scripts/*" = ["E402"] }

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# ============================================================
# MyPy — 类型检查
# ============================================================
[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = true
warn_no_return = true
warn_unused_ignores = true
exclude = ["scripts/", "tests/", "build/", ".venv/"]

# ============================================================
# Pytest
# ============================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "llm: marks tests that require LLM API key",
    "model: marks tests that require downloaded embedding/reranker models",
]

[tool.coverage.run]
source = ["campus_rag"]
omit = ["tests/*", "scripts/*"]

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
